// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ooth connect method after login can connect another strategy 1`] = `
Object {
  "_id": "<obfuscated>",
  "test": Object {
    "foo": 1,
  },
  "test2": Object {},
}
`;

exports[`ooth connect method after login can log in again 1`] = `
Object {
  "_id": "<obfuscated>",
  "test": Object {
    "foo": 2,
  },
}
`;

exports[`ooth connect method after login can log in with other strategy 1`] = `
Object {
  "_id": "<obfuscated>",
  "test": Object {
    "foo": 1,
  },
  "test2": Object {},
}
`;

exports[`ooth connect method after login can log in with other strategy 2`] = `
Object {
  "_id": "<obfuscated>",
  "test": Object {
    "foo": 1,
  },
  "test2": Object {},
}
`;

exports[`ooth connect method after login can log out 1`] = `
Object {
  "message": "Logged out",
}
`;

exports[`ooth connect method can log in 1`] = `
Object {
  "user": Object {
    "_id": "<obfuscated>",
    "test": Object {
      "foo": 1,
    },
  },
}
`;

exports[`ooth connect method can register 1`] = `
Object {
  "_id": "<obfuscated>",
  "test": Object {
    "foo": 1,
  },
}
`;

exports[`ooth methods fails with requireLogged 1`] = `
Object {
  "message": "Not logged in",
  "status": "error",
}
`;

exports[`ooth methods handle async errors 1`] = `
Object {
  "message": "Error message.",
  "status": "error",
}
`;

exports[`ooth methods handle errors 1`] = `
Object {
  "message": "Error message.",
  "status": "error",
}
`;

exports[`ooth methods handle method 1`] = `
Object {
  "message": "hi",
}
`;

exports[`ooth methods translates error 1`] = `
Object {
  "message": "French not logged",
  "status": "error",
}
`;
